// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`T5 golden solutions > (x+y)/2=3; x-y=2 1`] = `
"(x + y)/2 = 3; x - y = 2
1. Divide each term in the bracket by 2.
   x/2 + y/2 = 3; x - y = 2
2. Simplify each term: multiply the numbers, and add the powers of the same letter.
   (1/2)x + (1/2)y = 3; x - y = 2
3. Multiply both sides of equation (1) by 2 to clear the fractions.
   x + y = 6; x - y = 2
4. Add equation (1) to equation (2) to eliminate y.
   x + y = 6; 2x = 8
5. Divide both sides of equation (2) by 2.
   x + y = 6; x = 4
6. Substitute x = 4 into equation (1).
   4 + y = 6; x = 4
7. Write the terms in descending order of degree.
   y + 4 = 6; x = 4
8. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 6 - 4; x = 4
9. Subtract: 6 - 4 = 2.
   y = 2; x = 4
10. Write the answer with x first.
   x = 4; y = 2
11. Check: substitute x = 4 and y = 2 into both original equations. Both sides of each are equal.
   (4 + 2)/2 = 3;  3 = 3
   4 - 2 = 2;  2 = 2"
`;

exports[`T5 golden solutions > (x+y)/2=3; x-y=2 2`] = `
"(x + y)/2 = 3; x - y = 2
1. 把括號內每一項都除以 2。
   x/2 + y/2 = 3; x - y = 2
2. 化簡每一項：數字相乘，相同字母的指數相加。
   (1/2)x + (1/2)y = 3; x - y = 2
3. 方程 (1) 兩邊同時乘以 2，消去分母。
   x + y = 6; x - y = 2
4. 方程 (2) 加上方程 (1)，消去 y。
   x + y = 6; 2x = 8
5. 方程 (2) 兩邊同時除以 2。
   x + y = 6; x = 4
6. 把 x = 4 代入方程 (1)。
   4 + y = 6; x = 4
7. 按次數由高至低排列各項。
   y + 4 = 6; x = 4
8. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 6 - 4; x = 4
9. 相減：6 - 4 = 2。
   y = 2; x = 4
10. 把答案寫成 x 在前。
   x = 4; y = 2
11. 驗算：把 x = 4 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   (4 + 2)/2 = 3;  3 = 3
   4 - 2 = 2;  2 = 2"
`;

exports[`T5 golden solutions > -x+y=4; x+y=2 1`] = `
"-x + y = 4; x + y = 2
1. Add equation (1) to equation (2) to eliminate x.
   -x + y = 4; 2y = 6
2. Divide both sides of equation (2) by 2.
   -x + y = 4; y = 3
3. Substitute y = 3 into equation (1).
   -x + 3 = 4; y = 3
4. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -x = 4 - 3; y = 3
5. Subtract: 4 - 3 = 1.
   -x = 1; y = 3
6. Multiply both sides of equation (1) by -1.
   x = -1; y = 3
7. Check: substitute x = -1 and y = 3 into both original equations. Both sides of each are equal.
   -(-1) + 3 = 4;  4 = 4
   -1 + 3 = 2;  2 = 2"
`;

exports[`T5 golden solutions > -x+y=4; x+y=2 2`] = `
"-x + y = 4; x + y = 2
1. 方程 (2) 加上方程 (1)，消去 x。
   -x + y = 4; 2y = 6
2. 方程 (2) 兩邊同時除以 2。
   -x + y = 4; y = 3
3. 把 y = 3 代入方程 (1)。
   -x + 3 = 4; y = 3
4. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -x = 4 - 3; y = 3
5. 相減：4 - 3 = 1。
   -x = 1; y = 3
6. 方程 (1) 兩邊同時乘以 -1。
   x = -1; y = 3
7. 驗算：把 x = -1 及 y = 3 代入兩條原方程，每條的左右兩邊都相等。
   -(-1) + 3 = 4;  4 = 4
   -1 + 3 = 2;  2 = 2"
`;

exports[`T5 golden solutions > 0.5x+y=3; x-0.2y=1 1`] = `
"0.5x + y = 3; x - 0.2y = 1
1. Write each decimal as a fraction so that the arithmetic stays exact.
   (1/2)x + y = 3; x - (1/5)y = 1
2. Multiply both sides of equation (1) by 2 to clear the fractions.
   x + 2y = 6; x - (1/5)y = 1
3. Multiply both sides of equation (2) by 5 to clear the fractions.
   x + 2y = 6; 5x - y = 5
4. Multiply equation (2) by 2 so that the y terms have the same size.
   x + 2y = 6; 10x - 2y = 10
5. Add equation (1) to equation (2) to eliminate y.
   x + 2y = 6; 11x = 16
6. Divide both sides of equation (2) by 11.
   x + 2y = 6; x = 16/11
7. Substitute x = 16/11 into equation (1).
   16/11 + 2y = 6; x = 16/11
8. Write the terms in descending order of degree.
   2y + 16/11 = 6; x = 16/11
9. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   2y = 6 - 16/11; x = 16/11
10. The denominators are both 11, so subtract the numerators: 66/11 - 16/11 = 50/11.
   2y = 50/11; x = 16/11
11. Divide both sides of equation (1) by 2.
   y = 25/11; x = 16/11
12. Write the answer with x first.
   x = 16/11; y = 25/11
13. Check: substitute x = 16/11 and y = 25/11 into both original equations. Both sides of each are equal.
   0.5(16/11) + 25/11 = 3;  3 = 3
   16/11 - 0.2(25/11) = 1;  1 = 1"
`;

exports[`T5 golden solutions > 0.5x+y=3; x-0.2y=1 2`] = `
"0.5x + y = 3; x - 0.2y = 1
1. 先把每個小數寫成分數，令計算保持準確。
   (1/2)x + y = 3; x - (1/5)y = 1
2. 方程 (1) 兩邊同時乘以 2，消去分母。
   x + 2y = 6; x - (1/5)y = 1
3. 方程 (2) 兩邊同時乘以 5，消去分母。
   x + 2y = 6; 5x - y = 5
4. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   x + 2y = 6; 10x - 2y = 10
5. 方程 (2) 加上方程 (1)，消去 y。
   x + 2y = 6; 11x = 16
6. 方程 (2) 兩邊同時除以 11。
   x + 2y = 6; x = 16/11
7. 把 x = 16/11 代入方程 (1)。
   16/11 + 2y = 6; x = 16/11
8. 按次數由高至低排列各項。
   2y + 16/11 = 6; x = 16/11
9. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2y = 6 - 16/11; x = 16/11
10. 分母都是 11，所以分子相減：66/11 - 16/11 = 50/11。
   2y = 50/11; x = 16/11
11. 方程 (1) 兩邊同時除以 2。
   y = 25/11; x = 16/11
12. 把答案寫成 x 在前。
   x = 16/11; y = 25/11
13. 驗算：把 x = 16/11 及 y = 25/11 代入兩條原方程，每條的左右兩邊都相等。
   0.5(16/11) + 25/11 = 3;  3 = 3
   16/11 - 0.2(25/11) = 1;  1 = 1"
`;

exports[`T5 golden solutions > 1.5x-y=2; x+0.5y=6 1`] = `
"1.5x - y = 2; x + 0.5y = 6
1. Write each decimal as a fraction so that the arithmetic stays exact.
   (3/2)x - y = 2; x + (1/2)y = 6
2. Multiply both sides of equation (1) by 2 to clear the fractions.
   3x - 2y = 4; x + (1/2)y = 6
3. Multiply both sides of equation (2) by 2 to clear the fractions.
   3x - 2y = 4; 2x + y = 12
4. Multiply equation (2) by 2 so that the y terms have the same size.
   3x - 2y = 4; 4x + 2y = 24
5. Add equation (1) to equation (2) to eliminate y.
   3x - 2y = 4; 7x = 28
6. Divide both sides of equation (2) by 7.
   3x - 2y = 4; x = 4
7. Substitute x = 4 into equation (1).
   3*4 - 2y = 4; x = 4
8. Simplify each term: multiply the numbers, and add the powers of the same letter.
   12 - 2y = 4; x = 4
9. Write the terms in descending order of degree.
   -2y + 12 = 4; x = 4
10. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -2y = 4 - 12; x = 4
11. Subtract: 4 - 12 = -8.
   -2y = -8; x = 4
12. Divide both sides of equation (1) by -2.
   y = 4; x = 4
13. Write the answer with x first.
   x = 4; y = 4
14. Check: substitute x = 4 and y = 4 into both original equations. Both sides of each are equal.
   1.5*4 - 4 = 2;  2 = 2
   4 + 0.5*4 = 6;  6 = 6"
`;

exports[`T5 golden solutions > 1.5x-y=2; x+0.5y=6 2`] = `
"1.5x - y = 2; x + 0.5y = 6
1. 先把每個小數寫成分數，令計算保持準確。
   (3/2)x - y = 2; x + (1/2)y = 6
2. 方程 (1) 兩邊同時乘以 2，消去分母。
   3x - 2y = 4; x + (1/2)y = 6
3. 方程 (2) 兩邊同時乘以 2，消去分母。
   3x - 2y = 4; 2x + y = 12
4. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   3x - 2y = 4; 4x + 2y = 24
5. 方程 (2) 加上方程 (1)，消去 y。
   3x - 2y = 4; 7x = 28
6. 方程 (2) 兩邊同時除以 7。
   3x - 2y = 4; x = 4
7. 把 x = 4 代入方程 (1)。
   3*4 - 2y = 4; x = 4
8. 化簡每一項：數字相乘，相同字母的指數相加。
   12 - 2y = 4; x = 4
9. 按次數由高至低排列各項。
   -2y + 12 = 4; x = 4
10. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -2y = 4 - 12; x = 4
11. 相減：4 - 12 = -8。
   -2y = -8; x = 4
12. 方程 (1) 兩邊同時除以 -2。
   y = 4; x = 4
13. 把答案寫成 x 在前。
   x = 4; y = 4
14. 驗算：把 x = 4 及 y = 4 代入兩條原方程，每條的左右兩邊都相等。
   1.5*4 - 4 = 2;  2 = 2
   4 + 0.5*4 = 6;  6 = 6"
`;

exports[`T5 golden solutions > 2(x+1)=y; 3x-2y=-5 1`] = `
"2(x + 1) = y; 3x - 2y = -5
1. Multiply each term in the bracket by 2.
   2x + 2*1 = y; 3x - 2y = -5
2. Simplify each term: multiply the numbers, and add the powers of the same letter.
   2x + 2 = y; 3x - 2y = -5
3. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   2x - y = -2; 3x - 2y = -5
4. Multiply equation (1) by 2 so that the y terms have the same size.
   4x - 2y = -4; 3x - 2y = -5
5. Subtract equation (1) from equation (2) to eliminate y.
   4x - 2y = -4; -x = -1
6. Multiply both sides of equation (2) by -1.
   4x - 2y = -4; x = 1
7. Substitute x = 1 into equation (1).
   4*1 - 2y = -4; x = 1
8. Simplify each term: multiply the numbers, and add the powers of the same letter.
   4 - 2y = -4; x = 1
9. Write the terms in descending order of degree.
   -2y + 4 = -4; x = 1
10. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -2y = -4 - 4; x = 1
11. Subtract: -4 - 4 = -8.
   -2y = -8; x = 1
12. Divide both sides of equation (1) by -2.
   y = 4; x = 1
13. Write the answer with x first.
   x = 1; y = 4
14. Check: substitute x = 1 and y = 4 into both original equations. Both sides of each are equal.
   2(1 + 1) = 4;  4 = 4
   3*1 - 2*4 = -5;  -5 = -5"
`;

exports[`T5 golden solutions > 2(x+1)=y; 3x-2y=-5 2`] = `
"2(x + 1) = y; 3x - 2y = -5
1. 把括號內每一項都乘以 2。
   2x + 2*1 = y; 3x - 2y = -5
2. 化簡每一項：數字相乘，相同字母的指數相加。
   2x + 2 = y; 3x - 2y = -5
3. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2x - y = -2; 3x - 2y = -5
4. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   4x - 2y = -4; 3x - 2y = -5
5. 方程 (2) 減去方程 (1)，消去 y。
   4x - 2y = -4; -x = -1
6. 方程 (2) 兩邊同時乘以 -1。
   4x - 2y = -4; x = 1
7. 把 x = 1 代入方程 (1)。
   4*1 - 2y = -4; x = 1
8. 化簡每一項：數字相乘，相同字母的指數相加。
   4 - 2y = -4; x = 1
9. 按次數由高至低排列各項。
   -2y + 4 = -4; x = 1
10. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -2y = -4 - 4; x = 1
11. 相減：-4 - 4 = -8。
   -2y = -8; x = 1
12. 方程 (1) 兩邊同時除以 -2。
   y = 4; x = 1
13. 把答案寫成 x 在前。
   x = 1; y = 4
14. 驗算：把 x = 1 及 y = 4 代入兩條原方程，每條的左右兩邊都相等。
   2(1 + 1) = 4;  4 = 4
   3*1 - 2*4 = -5;  -5 = -5"
`;

exports[`T5 golden solutions > 2x+3y=12; x-y=1 1`] = `
"2x + 3y = 12; x - y = 1
1. Multiply equation (2) by 2 so that the x terms have the same size.
   2x + 3y = 12; 2x - 2y = 2
2. Subtract equation (1) from equation (2) to eliminate x.
   2x + 3y = 12; -5y = -10
3. Divide both sides of equation (2) by -5.
   2x + 3y = 12; y = 2
4. Substitute y = 2 into equation (1).
   2x + 3*2 = 12; y = 2
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   2x + 6 = 12; y = 2
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   2x = 12 - 6; y = 2
7. Subtract: 12 - 6 = 6.
   2x = 6; y = 2
8. Divide both sides of equation (1) by 2.
   x = 3; y = 2
9. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   2*3 + 3*2 = 12;  12 = 12
   3 - 2 = 1;  1 = 1"
`;

exports[`T5 golden solutions > 2x+3y=12; x-y=1 2`] = `
"2x + 3y = 12; x - y = 1
1. 方程 (2) 乘以 2，令兩條方程中 x 項的係數大小相同。
   2x + 3y = 12; 2x - 2y = 2
2. 方程 (2) 減去方程 (1)，消去 x。
   2x + 3y = 12; -5y = -10
3. 方程 (2) 兩邊同時除以 -5。
   2x + 3y = 12; y = 2
4. 把 y = 2 代入方程 (1)。
   2x + 3*2 = 12; y = 2
5. 化簡每一項：數字相乘，相同字母的指數相加。
   2x + 6 = 12; y = 2
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2x = 12 - 6; y = 2
7. 相減：12 - 6 = 6。
   2x = 6; y = 2
8. 方程 (1) 兩邊同時除以 2。
   x = 3; y = 2
9. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   2*3 + 3*2 = 12;  12 = 12
   3 - 2 = 1;  1 = 1"
`;

exports[`T5 golden solutions > 2x+4y=3; 3x-2y=1 1`] = `
"2x + 4y = 3; 3x - 2y = 1
1. Multiply equation (2) by 2 so that the y terms have the same size.
   2x + 4y = 3; 6x - 4y = 2
2. Add equation (1) to equation (2) to eliminate y.
   2x + 4y = 3; 8x = 5
3. Divide both sides of equation (2) by 8.
   2x + 4y = 3; x = 5/8
4. Substitute x = 5/8 into equation (1).
   2(5/8) + 4y = 3; x = 5/8
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   5/4 + 4y = 3; x = 5/8
6. Write the terms in descending order of degree.
   4y + 5/4 = 3; x = 5/8
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   4y = 3 - 5/4; x = 5/8
8. The denominators are both 4, so subtract the numerators: 12/4 - 5/4 = 7/4.
   4y = 7/4; x = 5/8
9. Divide both sides of equation (1) by 4.
   y = 7/16; x = 5/8
10. Write the answer with x first.
   x = 5/8; y = 7/16
11. Check: substitute x = 5/8 and y = 7/16 into both original equations. Both sides of each are equal.
   2(5/8) + 4(7/16) = 3;  3 = 3
   3(5/8) - 2(7/16) = 1;  1 = 1"
`;

exports[`T5 golden solutions > 2x+4y=3; 3x-2y=1 2`] = `
"2x + 4y = 3; 3x - 2y = 1
1. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   2x + 4y = 3; 6x - 4y = 2
2. 方程 (2) 加上方程 (1)，消去 y。
   2x + 4y = 3; 8x = 5
3. 方程 (2) 兩邊同時除以 8。
   2x + 4y = 3; x = 5/8
4. 把 x = 5/8 代入方程 (1)。
   2(5/8) + 4y = 3; x = 5/8
5. 化簡每一項：數字相乘，相同字母的指數相加。
   5/4 + 4y = 3; x = 5/8
6. 按次數由高至低排列各項。
   4y + 5/4 = 3; x = 5/8
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   4y = 3 - 5/4; x = 5/8
8. 分母都是 4，所以分子相減：12/4 - 5/4 = 7/4。
   4y = 7/4; x = 5/8
9. 方程 (1) 兩邊同時除以 4。
   y = 7/16; x = 5/8
10. 把答案寫成 x 在前。
   x = 5/8; y = 7/16
11. 驗算：把 x = 5/8 及 y = 7/16 代入兩條原方程，每條的左右兩邊都相等。
   2(5/8) + 4(7/16) = 3;  3 = 3
   3(5/8) - 2(7/16) = 1;  1 = 1"
`;

exports[`T5 golden solutions > 2x+y=7; x-y=2 1`] = `
"2x + y = 7; x - y = 2
1. Add equation (1) to equation (2) to eliminate y.
   2x + y = 7; 3x = 9
2. Divide both sides of equation (2) by 3.
   2x + y = 7; x = 3
3. Substitute x = 3 into equation (1).
   2*3 + y = 7; x = 3
4. Simplify each term: multiply the numbers, and add the powers of the same letter.
   6 + y = 7; x = 3
5. Write the terms in descending order of degree.
   y + 6 = 7; x = 3
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 7 - 6; x = 3
7. Subtract: 7 - 6 = 1.
   y = 1; x = 3
8. Write the answer with x first.
   x = 3; y = 1
9. Check: substitute x = 3 and y = 1 into both original equations. Both sides of each are equal.
   2*3 + 1 = 7;  7 = 7
   3 - 1 = 2;  2 = 2"
`;

exports[`T5 golden solutions > 2x+y=7; x-y=2 2`] = `
"2x + y = 7; x - y = 2
1. 方程 (2) 加上方程 (1)，消去 y。
   2x + y = 7; 3x = 9
2. 方程 (2) 兩邊同時除以 3。
   2x + y = 7; x = 3
3. 把 x = 3 代入方程 (1)。
   2*3 + y = 7; x = 3
4. 化簡每一項：數字相乘，相同字母的指數相加。
   6 + y = 7; x = 3
5. 按次數由高至低排列各項。
   y + 6 = 7; x = 3
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 7 - 6; x = 3
7. 相減：7 - 6 = 1。
   y = 1; x = 3
8. 把答案寫成 x 在前。
   x = 3; y = 1
9. 驗算：把 x = 3 及 y = 1 代入兩條原方程，每條的左右兩邊都相等。
   2*3 + 1 = 7;  7 = 7
   3 - 1 = 2;  2 = 2"
`;

exports[`T5 golden solutions > 2x=6; x+3y=9 1`] = `
"2x = 6; x + 3y = 9
1. Divide both sides of equation (1) by 2.
   x = 3; x + 3y = 9
2. Substitute x = 3 into equation (2).
   x = 3; 3 + 3y = 9
3. Write the terms in descending order of degree.
   x = 3; 3y + 3 = 9
4. Equation (2): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   x = 3; 3y = 9 - 3
5. Subtract: 9 - 3 = 6.
   x = 3; 3y = 6
6. Divide both sides of equation (2) by 3.
   x = 3; y = 2
7. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   2*3 = 6;  6 = 6
   3 + 3*2 = 9;  9 = 9"
`;

exports[`T5 golden solutions > 2x=6; x+3y=9 2`] = `
"2x = 6; x + 3y = 9
1. 方程 (1) 兩邊同時除以 2。
   x = 3; x + 3y = 9
2. 把 x = 3 代入方程 (2)。
   x = 3; 3 + 3y = 9
3. 按次數由高至低排列各項。
   x = 3; 3y + 3 = 9
4. 方程 (2)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   x = 3; 3y = 9 - 3
5. 相減：9 - 3 = 6。
   x = 3; 3y = 6
6. 方程 (2) 兩邊同時除以 3。
   x = 3; y = 2
7. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   2*3 = 6;  6 = 6
   3 + 3*2 = 9;  9 = 9"
`;

exports[`T5 golden solutions > 2x-4y=6; x-2y=3 1`] = `
"2x - 4y = 6; x - 2y = 3
1. Multiply equation (2) by 2 so that the y terms have the same size.
   2x - 4y = 6; 2x - 4y = 6
2. Subtract equation (1) from equation (2) to eliminate y.
   2x - 4y = 6; 0 = 0
3. This statement is always true, so both equations describe the same line: there are infinitely many solutions.
   Infinitely many solutions: every pair satisfying 2x - 4y = 6."
`;

exports[`T5 golden solutions > 2x-4y=6; x-2y=3 2`] = `
"2x - 4y = 6; x - 2y = 3
1. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   2x - 4y = 6; 2x - 4y = 6
2. 方程 (2) 減去方程 (1)，消去 y。
   2x - 4y = 6; 0 = 0
3. 這個式子必定成立，即兩條方程代表同一條直線，所以有無限多組解。
   有無限多組解：所有滿足 2x - 4y = 6 的數對。"
`;

exports[`T5 golden solutions > 2x-y=0; x+y=6 1`] = `
"2x - y = 0; x + y = 6
1. Add equation (1) to equation (2) to eliminate y.
   2x - y = 0; 3x = 6
2. Divide both sides of equation (2) by 3.
   2x - y = 0; x = 2
3. Substitute x = 2 into equation (1).
   2*2 - y = 0; x = 2
4. Simplify each term: multiply the numbers, and add the powers of the same letter.
   4 - y = 0; x = 2
5. Write the terms in descending order of degree.
   -y + 4 = 0; x = 2
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -y = -4; x = 2
7. Multiply both sides of equation (1) by -1.
   y = 4; x = 2
8. Write the answer with x first.
   x = 2; y = 4
9. Check: substitute x = 2 and y = 4 into both original equations. Both sides of each are equal.
   2*2 - 4 = 0;  0 = 0
   2 + 4 = 6;  6 = 6"
`;

exports[`T5 golden solutions > 2x-y=0; x+y=6 2`] = `
"2x - y = 0; x + y = 6
1. 方程 (2) 加上方程 (1)，消去 y。
   2x - y = 0; 3x = 6
2. 方程 (2) 兩邊同時除以 3。
   2x - y = 0; x = 2
3. 把 x = 2 代入方程 (1)。
   2*2 - y = 0; x = 2
4. 化簡每一項：數字相乘，相同字母的指數相加。
   4 - y = 0; x = 2
5. 按次數由高至低排列各項。
   -y + 4 = 0; x = 2
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -y = -4; x = 2
7. 方程 (1) 兩邊同時乘以 -1。
   y = 4; x = 2
8. 把答案寫成 x 在前。
   x = 2; y = 4
9. 驗算：把 x = 2 及 y = 4 代入兩條原方程，每條的左右兩邊都相等。
   2*2 - 4 = 0;  0 = 0
   2 + 4 = 6;  6 = 6"
`;

exports[`T5 golden solutions > 2x-y=1; 4x-2y=2 1`] = `
"2x - y = 1; 4x - 2y = 2
1. Multiply equation (1) by 2 so that the y terms have the same size.
   4x - 2y = 2; 4x - 2y = 2
2. Subtract equation (1) from equation (2) to eliminate y.
   4x - 2y = 2; 0 = 0
3. This statement is always true, so both equations describe the same line: there are infinitely many solutions.
   Infinitely many solutions: every pair satisfying 4x - 2y = 2."
`;

exports[`T5 golden solutions > 2x-y=1; 4x-2y=2 2`] = `
"2x - y = 1; 4x - 2y = 2
1. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   4x - 2y = 2; 4x - 2y = 2
2. 方程 (2) 減去方程 (1)，消去 y。
   4x - 2y = 2; 0 = 0
3. 這個式子必定成立，即兩條方程代表同一條直線，所以有無限多組解。
   有無限多組解：所有滿足 4x - 2y = 2 的數對。"
`;

exports[`T5 golden solutions > 2x-y=1; 4x-2y=5 1`] = `
"2x - y = 1; 4x - 2y = 5
1. Multiply equation (1) by 2 so that the y terms have the same size.
   4x - 2y = 2; 4x - 2y = 5
2. Subtract equation (1) from equation (2) to eliminate y.
   4x - 2y = 2; 0 = 3
3. This statement is false, so the simultaneous equations have no solution.
   There is no real solution."
`;

exports[`T5 golden solutions > 2x-y=1; 4x-2y=5 2`] = `
"2x - y = 1; 4x - 2y = 5
1. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   4x - 2y = 2; 4x - 2y = 5
2. 方程 (2) 減去方程 (1)，消去 y。
   4x - 2y = 2; 0 = 3
3. 這個式子不成立，所以聯立方程無解。
   沒有實數解。"
`;

exports[`T5 golden solutions > 3(x-y)=6; x+2y=8 1`] = `
"3(x - y) = 6; x + 2y = 8
1. Multiply each term in the bracket by 3.
   3x - 3y = 6; x + 2y = 8
2. Multiply equation (2) by 3 so that the x terms have the same size.
   3x - 3y = 6; 3x + 6y = 24
3. Subtract equation (1) from equation (2) to eliminate x.
   3x - 3y = 6; 9y = 18
4. Divide both sides of equation (2) by 9.
   3x - 3y = 6; y = 2
5. Substitute y = 2 into equation (1).
   3x - 3*2 = 6; y = 2
6. Simplify each term: multiply the numbers, and add the powers of the same letter.
   3x - 6 = 6; y = 2
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   3x = 6 + 6; y = 2
8. Add: 6 + 6 = 12.
   3x = 12; y = 2
9. Divide both sides of equation (1) by 3.
   x = 4; y = 2
10. Check: substitute x = 4 and y = 2 into both original equations. Both sides of each are equal.
   3(4 - 2) = 6;  6 = 6
   4 + 2*2 = 8;  8 = 8"
`;

exports[`T5 golden solutions > 3(x-y)=6; x+2y=8 2`] = `
"3(x - y) = 6; x + 2y = 8
1. 把括號內每一項都乘以 3。
   3x - 3y = 6; x + 2y = 8
2. 方程 (2) 乘以 3，令兩條方程中 x 項的係數大小相同。
   3x - 3y = 6; 3x + 6y = 24
3. 方程 (2) 減去方程 (1)，消去 x。
   3x - 3y = 6; 9y = 18
4. 方程 (2) 兩邊同時除以 9。
   3x - 3y = 6; y = 2
5. 把 y = 2 代入方程 (1)。
   3x - 3*2 = 6; y = 2
6. 化簡每一項：數字相乘，相同字母的指數相加。
   3x - 6 = 6; y = 2
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   3x = 6 + 6; y = 2
8. 相加：6 + 6 = 12。
   3x = 12; y = 2
9. 方程 (1) 兩邊同時除以 3。
   x = 4; y = 2
10. 驗算：把 x = 4 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   3(4 - 2) = 6;  6 = 6
   4 + 2*2 = 8;  8 = 8"
`;

exports[`T5 golden solutions > 3x+2y=16; 5x-3y=14 1`] = `
"3x + 2y = 16; 5x - 3y = 14
1. Multiply equation (1) by 3 and equation (2) by 2 so that the y terms have the same size.
   9x + 6y = 48; 10x - 6y = 28
2. Add equation (1) to equation (2) to eliminate y.
   9x + 6y = 48; 19x = 76
3. Divide both sides of equation (2) by 19.
   9x + 6y = 48; x = 4
4. Substitute x = 4 into equation (1).
   9*4 + 6y = 48; x = 4
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   36 + 6y = 48; x = 4
6. Write the terms in descending order of degree.
   6y + 36 = 48; x = 4
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   6y = 48 - 36; x = 4
8. Subtract: 48 - 36 = 12.
   6y = 12; x = 4
9. Divide both sides of equation (1) by 6.
   y = 2; x = 4
10. Write the answer with x first.
   x = 4; y = 2
11. Check: substitute x = 4 and y = 2 into both original equations. Both sides of each are equal.
   3*4 + 2*2 = 16;  16 = 16
   5*4 - 3*2 = 14;  14 = 14"
`;

exports[`T5 golden solutions > 3x+2y=16; 5x-3y=14 2`] = `
"3x + 2y = 16; 5x - 3y = 14
1. 方程 (1) 乘以 3，方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   9x + 6y = 48; 10x - 6y = 28
2. 方程 (2) 加上方程 (1)，消去 y。
   9x + 6y = 48; 19x = 76
3. 方程 (2) 兩邊同時除以 19。
   9x + 6y = 48; x = 4
4. 把 x = 4 代入方程 (1)。
   9*4 + 6y = 48; x = 4
5. 化簡每一項：數字相乘，相同字母的指數相加。
   36 + 6y = 48; x = 4
6. 按次數由高至低排列各項。
   6y + 36 = 48; x = 4
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   6y = 48 - 36; x = 4
8. 相減：48 - 36 = 12。
   6y = 12; x = 4
9. 方程 (1) 兩邊同時除以 6。
   y = 2; x = 4
10. 把答案寫成 x 在前。
   x = 4; y = 2
11. 驗算：把 x = 4 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   3*4 + 2*2 = 16;  16 = 16
   5*4 - 3*2 = 14;  14 = 14"
`;

exports[`T5 golden solutions > 3y+2x=12; y-x=-1 1`] = `
"3y + 2x = 12; y - x = -1
1. Write the terms in descending order of degree.
   2x + 3y = 12; y - x = -1
2. Write the terms in descending order of degree.
   2x + 3y = 12; -x + y = -1
3. Multiply equation (2) by 2 so that the x terms have the same size.
   2x + 3y = 12; -2x + 2y = -2
4. Add equation (1) to equation (2) to eliminate x.
   2x + 3y = 12; 5y = 10
5. Divide both sides of equation (2) by 5.
   2x + 3y = 12; y = 2
6. Substitute y = 2 into equation (1).
   2x + 3*2 = 12; y = 2
7. Simplify each term: multiply the numbers, and add the powers of the same letter.
   2x + 6 = 12; y = 2
8. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   2x = 12 - 6; y = 2
9. Subtract: 12 - 6 = 6.
   2x = 6; y = 2
10. Divide both sides of equation (1) by 2.
   x = 3; y = 2
11. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   3*2 + 2*3 = 12;  12 = 12
   2 - 3 = -1;  -1 = -1"
`;

exports[`T5 golden solutions > 3y+2x=12; y-x=-1 2`] = `
"3y + 2x = 12; y - x = -1
1. 按次數由高至低排列各項。
   2x + 3y = 12; y - x = -1
2. 按次數由高至低排列各項。
   2x + 3y = 12; -x + y = -1
3. 方程 (2) 乘以 2，令兩條方程中 x 項的係數大小相同。
   2x + 3y = 12; -2x + 2y = -2
4. 方程 (2) 加上方程 (1)，消去 x。
   2x + 3y = 12; 5y = 10
5. 方程 (2) 兩邊同時除以 5。
   2x + 3y = 12; y = 2
6. 把 y = 2 代入方程 (1)。
   2x + 3*2 = 12; y = 2
7. 化簡每一項：數字相乘，相同字母的指數相加。
   2x + 6 = 12; y = 2
8. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2x = 12 - 6; y = 2
9. 相減：12 - 6 = 6。
   2x = 6; y = 2
10. 方程 (1) 兩邊同時除以 2。
   x = 3; y = 2
11. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   3*2 + 2*3 = 12;  12 = 12
   2 - 3 = -1;  -1 = -1"
`;

exports[`T5 golden solutions > 4x-3y=1; 2x+5y=7 1`] = `
"4x - 3y = 1; 2x + 5y = 7
1. Multiply equation (2) by 2 so that the x terms have the same size.
   4x - 3y = 1; 4x + 10y = 14
2. Subtract equation (1) from equation (2) to eliminate x.
   4x - 3y = 1; 13y = 13
3. Divide both sides of equation (2) by 13.
   4x - 3y = 1; y = 1
4. Substitute y = 1 into equation (1).
   4x - 3*1 = 1; y = 1
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   4x - 3 = 1; y = 1
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   4x = 1 + 3; y = 1
7. Add: 1 + 3 = 4.
   4x = 4; y = 1
8. Divide both sides of equation (1) by 4.
   x = 1; y = 1
9. Check: substitute x = 1 and y = 1 into both original equations. Both sides of each are equal.
   4*1 - 3*1 = 1;  1 = 1
   2*1 + 5*1 = 7;  7 = 7"
`;

exports[`T5 golden solutions > 4x-3y=1; 2x+5y=7 2`] = `
"4x - 3y = 1; 2x + 5y = 7
1. 方程 (2) 乘以 2，令兩條方程中 x 項的係數大小相同。
   4x - 3y = 1; 4x + 10y = 14
2. 方程 (2) 減去方程 (1)，消去 x。
   4x - 3y = 1; 13y = 13
3. 方程 (2) 兩邊同時除以 13。
   4x - 3y = 1; y = 1
4. 把 y = 1 代入方程 (1)。
   4x - 3*1 = 1; y = 1
5. 化簡每一項：數字相乘，相同字母的指數相加。
   4x - 3 = 1; y = 1
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   4x = 1 + 3; y = 1
7. 相加：1 + 3 = 4。
   4x = 4; y = 1
8. 方程 (1) 兩邊同時除以 4。
   x = 1; y = 1
9. 驗算：把 x = 1 及 y = 1 代入兩條原方程，每條的左右兩邊都相等。
   4*1 - 3*1 = 1;  1 = 1
   2*1 + 5*1 = 7;  7 = 7"
`;

exports[`T5 golden solutions > 5x+2y=1; 3x+4y=9 1`] = `
"5x + 2y = 1; 3x + 4y = 9
1. Multiply equation (1) by 2 so that the y terms have the same size.
   10x + 4y = 2; 3x + 4y = 9
2. Subtract equation (1) from equation (2) to eliminate y.
   10x + 4y = 2; -7x = 7
3. Divide both sides of equation (2) by -7.
   10x + 4y = 2; x = -1
4. Substitute x = -1 into equation (1).
   10(-1) + 4y = 2; x = -1
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   -10 + 4y = 2; x = -1
6. Write the terms in descending order of degree.
   4y - 10 = 2; x = -1
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   4y = 2 + 10; x = -1
8. Add: 2 + 10 = 12.
   4y = 12; x = -1
9. Divide both sides of equation (1) by 4.
   y = 3; x = -1
10. Write the answer with x first.
   x = -1; y = 3
11. Check: substitute x = -1 and y = 3 into both original equations. Both sides of each are equal.
   5(-1) + 2*3 = 1;  1 = 1
   3(-1) + 4*3 = 9;  9 = 9"
`;

exports[`T5 golden solutions > 5x+2y=1; 3x+4y=9 2`] = `
"5x + 2y = 1; 3x + 4y = 9
1. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   10x + 4y = 2; 3x + 4y = 9
2. 方程 (2) 減去方程 (1)，消去 y。
   10x + 4y = 2; -7x = 7
3. 方程 (2) 兩邊同時除以 -7。
   10x + 4y = 2; x = -1
4. 把 x = -1 代入方程 (1)。
   10(-1) + 4y = 2; x = -1
5. 化簡每一項：數字相乘，相同字母的指數相加。
   -10 + 4y = 2; x = -1
6. 按次數由高至低排列各項。
   4y - 10 = 2; x = -1
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   4y = 2 + 10; x = -1
8. 相加：2 + 10 = 12。
   4y = 12; x = -1
9. 方程 (1) 兩邊同時除以 4。
   y = 3; x = -1
10. 把答案寫成 x 在前。
   x = -1; y = 3
11. 驗算：把 x = -1 及 y = 3 代入兩條原方程，每條的左右兩邊都相等。
   5(-1) + 2*3 = 1;  1 = 1
   3(-1) + 4*3 = 9;  9 = 9"
`;

exports[`T5 golden solutions > 5x-y=3; 10x-2y=7 1`] = `
"5x - y = 3; 10x - 2y = 7
1. Multiply equation (1) by 2 so that the y terms have the same size.
   10x - 2y = 6; 10x - 2y = 7
2. Subtract equation (1) from equation (2) to eliminate y.
   10x - 2y = 6; 0 = 1
3. This statement is false, so the simultaneous equations have no solution.
   There is no real solution."
`;

exports[`T5 golden solutions > 5x-y=3; 10x-2y=7 2`] = `
"5x - y = 3; 10x - 2y = 7
1. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   10x - 2y = 6; 10x - 2y = 7
2. 方程 (2) 減去方程 (1)，消去 y。
   10x - 2y = 6; 0 = 1
3. 這個式子不成立，所以聯立方程無解。
   沒有實數解。"
`;

exports[`T5 golden solutions > 6x-4y=2; 9x+2y=13 1`] = `
"6x - 4y = 2; 9x + 2y = 13
1. Multiply equation (2) by 2 so that the y terms have the same size.
   6x - 4y = 2; 18x + 4y = 26
2. Add equation (1) to equation (2) to eliminate y.
   6x - 4y = 2; 24x = 28
3. Divide both sides of equation (2) by 24.
   6x - 4y = 2; x = 7/6
4. Substitute x = 7/6 into equation (1).
   6(7/6) - 4y = 2; x = 7/6
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   7 - 4y = 2; x = 7/6
6. Write the terms in descending order of degree.
   -4y + 7 = 2; x = 7/6
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -4y = 2 - 7; x = 7/6
8. Subtract: 2 - 7 = -5.
   -4y = -5; x = 7/6
9. Divide both sides of equation (1) by -4.
   y = 5/4; x = 7/6
10. Write the answer with x first.
   x = 7/6; y = 5/4
11. Check: substitute x = 7/6 and y = 5/4 into both original equations. Both sides of each are equal.
   6(7/6) - 4(5/4) = 2;  2 = 2
   9(7/6) + 2(5/4) = 13;  13 = 13"
`;

exports[`T5 golden solutions > 6x-4y=2; 9x+2y=13 2`] = `
"6x - 4y = 2; 9x + 2y = 13
1. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   6x - 4y = 2; 18x + 4y = 26
2. 方程 (2) 加上方程 (1)，消去 y。
   6x - 4y = 2; 24x = 28
3. 方程 (2) 兩邊同時除以 24。
   6x - 4y = 2; x = 7/6
4. 把 x = 7/6 代入方程 (1)。
   6(7/6) - 4y = 2; x = 7/6
5. 化簡每一項：數字相乘，相同字母的指數相加。
   7 - 4y = 2; x = 7/6
6. 按次數由高至低排列各項。
   -4y + 7 = 2; x = 7/6
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -4y = 2 - 7; x = 7/6
8. 相減：2 - 7 = -5。
   -4y = -5; x = 7/6
9. 方程 (1) 兩邊同時除以 -4。
   y = 5/4; x = 7/6
10. 把答案寫成 x 在前。
   x = 7/6; y = 5/4
11. 驗算：把 x = 7/6 及 y = 5/4 代入兩條原方程，每條的左右兩邊都相等。
   6(7/6) - 4(5/4) = 2;  2 = 2
   9(7/6) + 2(5/4) = 13;  13 = 13"
`;

exports[`T5 golden solutions > 7x+3y=1; 2x+5y=12 1`] = `
"7x + 3y = 1; 2x + 5y = 12
1. Multiply equation (1) by 5 and equation (2) by 3 so that the y terms have the same size.
   35x + 15y = 5; 6x + 15y = 36
2. Subtract equation (1) from equation (2) to eliminate y.
   35x + 15y = 5; -29x = 31
3. Divide both sides of equation (2) by -29.
   35x + 15y = 5; x = -31/29
4. Substitute x = -31/29 into equation (1).
   35(-31/29) + 15y = 5; x = -31/29
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   -1085/29 + 15y = 5; x = -31/29
6. Write the terms in descending order of degree.
   15y - 1085/29 = 5; x = -31/29
7. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   15y = 5 + 1085/29; x = -31/29
8. The denominators are both 29, so add the numerators: 145/29 + 1085/29 = 1230/29.
   15y = 1230/29; x = -31/29
9. Divide both sides of equation (1) by 15.
   y = 82/29; x = -31/29
10. Write the answer with x first.
   x = -31/29; y = 82/29
11. Check: substitute x = -31/29 and y = 82/29 into both original equations. Both sides of each are equal.
   7(-31/29) + 3(82/29) = 1;  1 = 1
   2(-31/29) + 5(82/29) = 12;  12 = 12"
`;

exports[`T5 golden solutions > 7x+3y=1; 2x+5y=12 2`] = `
"7x + 3y = 1; 2x + 5y = 12
1. 方程 (1) 乘以 5，方程 (2) 乘以 3，令兩條方程中 y 項的係數大小相同。
   35x + 15y = 5; 6x + 15y = 36
2. 方程 (2) 減去方程 (1)，消去 y。
   35x + 15y = 5; -29x = 31
3. 方程 (2) 兩邊同時除以 -29。
   35x + 15y = 5; x = -31/29
4. 把 x = -31/29 代入方程 (1)。
   35(-31/29) + 15y = 5; x = -31/29
5. 化簡每一項：數字相乘，相同字母的指數相加。
   -1085/29 + 15y = 5; x = -31/29
6. 按次數由高至低排列各項。
   15y - 1085/29 = 5; x = -31/29
7. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   15y = 5 + 1085/29; x = -31/29
8. 分母都是 29，所以分子相加：145/29 + 1085/29 = 1230/29。
   15y = 1230/29; x = -31/29
9. 方程 (1) 兩邊同時除以 15。
   y = 82/29; x = -31/29
10. 把答案寫成 x 在前。
   x = -31/29; y = 82/29
11. 驗算：把 x = -31/29 及 y = 82/29 代入兩條原方程，每條的左右兩邊都相等。
   7(-31/29) + 3(82/29) = 1;  1 = 1
   2(-31/29) + 5(82/29) = 12;  12 = 12"
`;

exports[`T5 golden solutions > a+b=10; a-b=4 1`] = `
"a + b = 10; a - b = 4
1. Add equation (1) to equation (2) to eliminate b.
   a + b = 10; 2a = 14
2. Divide both sides of equation (2) by 2.
   a + b = 10; a = 7
3. Substitute a = 7 into equation (1).
   7 + b = 10; a = 7
4. Write the terms in descending order of degree.
   b + 7 = 10; a = 7
5. Equation (1): move the terms with a and b to the left and the numbers to the right. A term changes sign when it moves.
   b = 10 - 7; a = 7
6. Subtract: 10 - 7 = 3.
   b = 3; a = 7
7. Write the answer with a first.
   a = 7; b = 3
8. Check: substitute a = 7 and b = 3 into both original equations. Both sides of each are equal.
   7 + 3 = 10;  10 = 10
   7 - 3 = 4;  4 = 4"
`;

exports[`T5 golden solutions > a+b=10; a-b=4 2`] = `
"a + b = 10; a - b = 4
1. 方程 (2) 加上方程 (1)，消去 b。
   a + b = 10; 2a = 14
2. 方程 (2) 兩邊同時除以 2。
   a + b = 10; a = 7
3. 把 a = 7 代入方程 (1)。
   7 + b = 10; a = 7
4. 按次數由高至低排列各項。
   b + 7 = 10; a = 7
5. 方程 (1)：把含 a 和 b 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   b = 10 - 7; a = 7
6. 相減：10 - 7 = 3。
   b = 3; a = 7
7. 把答案寫成 a 在前。
   a = 7; b = 3
8. 驗算：把 a = 7 及 b = 3 代入兩條原方程，每條的左右兩邊都相等。
   7 + 3 = 10;  10 = 10
   7 - 3 = 4;  4 = 4"
`;

exports[`T5 golden solutions > m+2n=7; 2m-n=4 1`] = `
"m + 2n = 7; 2m - n = 4
1. Multiply equation (2) by 2 so that the n terms have the same size.
   m + 2n = 7; 4m - 2n = 8
2. Add equation (1) to equation (2) to eliminate n.
   m + 2n = 7; 5m = 15
3. Divide both sides of equation (2) by 5.
   m + 2n = 7; m = 3
4. Substitute m = 3 into equation (1).
   3 + 2n = 7; m = 3
5. Write the terms in descending order of degree.
   2n + 3 = 7; m = 3
6. Equation (1): move the terms with m and n to the left and the numbers to the right. A term changes sign when it moves.
   2n = 7 - 3; m = 3
7. Subtract: 7 - 3 = 4.
   2n = 4; m = 3
8. Divide both sides of equation (1) by 2.
   n = 2; m = 3
9. Write the answer with m first.
   m = 3; n = 2
10. Check: substitute m = 3 and n = 2 into both original equations. Both sides of each are equal.
   3 + 2*2 = 7;  7 = 7
   2*3 - 2 = 4;  4 = 4"
`;

exports[`T5 golden solutions > m+2n=7; 2m-n=4 2`] = `
"m + 2n = 7; 2m - n = 4
1. 方程 (2) 乘以 2，令兩條方程中 n 項的係數大小相同。
   m + 2n = 7; 4m - 2n = 8
2. 方程 (2) 加上方程 (1)，消去 n。
   m + 2n = 7; 5m = 15
3. 方程 (2) 兩邊同時除以 5。
   m + 2n = 7; m = 3
4. 把 m = 3 代入方程 (1)。
   3 + 2n = 7; m = 3
5. 按次數由高至低排列各項。
   2n + 3 = 7; m = 3
6. 方程 (1)：把含 m 和 n 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2n = 7 - 3; m = 3
7. 相減：7 - 3 = 4。
   2n = 4; m = 3
8. 方程 (1) 兩邊同時除以 2。
   n = 2; m = 3
9. 把答案寫成 m 在前。
   m = 3; n = 2
10. 驗算：把 m = 3 及 n = 2 代入兩條原方程，每條的左右兩邊都相等。
   3 + 2*2 = 7;  7 = 7
   2*3 - 2 = 4;  4 = 4"
`;

exports[`T5 golden solutions > p=2q; p+q=9 1`] = `
"p = 2q; p + q = 9
1. Equation (1): move the terms with p and q to the left and the numbers to the right. A term changes sign when it moves.
   p - 2q = 0; p + q = 9
2. Subtract equation (1) from equation (2) to eliminate p.
   p - 2q = 0; 3q = 9
3. Divide both sides of equation (2) by 3.
   p - 2q = 0; q = 3
4. Substitute q = 3 into equation (1).
   p - 2*3 = 0; q = 3
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   p - 6 = 0; q = 3
6. Equation (1): move the terms with p and q to the left and the numbers to the right. A term changes sign when it moves.
   p = 6; q = 3
7. Check: substitute p = 6 and q = 3 into both original equations. Both sides of each are equal.
   6 = 6;  2*3 = 6
   6 + 3 = 9;  9 = 9"
`;

exports[`T5 golden solutions > p=2q; p+q=9 2`] = `
"p = 2q; p + q = 9
1. 方程 (1)：把含 p 和 q 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   p - 2q = 0; p + q = 9
2. 方程 (2) 減去方程 (1)，消去 p。
   p - 2q = 0; 3q = 9
3. 方程 (2) 兩邊同時除以 3。
   p - 2q = 0; q = 3
4. 把 q = 3 代入方程 (1)。
   p - 2*3 = 0; q = 3
5. 化簡每一項：數字相乘，相同字母的指數相加。
   p - 6 = 0; q = 3
6. 方程 (1)：把含 p 和 q 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   p = 6; q = 3
7. 驗算：把 p = 6 及 q = 3 代入兩條原方程，每條的左右兩邊都相等。
   6 = 6;  2*3 = 6
   6 + 3 = 9;  9 = 9"
`;

exports[`T5 golden solutions > x+2y=0; 3x-y=0 1`] = `
"x + 2y = 0; 3x - y = 0
1. Multiply equation (2) by 2 so that the y terms have the same size.
   x + 2y = 0; 6x - 2y = 0
2. Add equation (1) to equation (2) to eliminate y.
   x + 2y = 0; 7x = 0
3. Divide both sides of equation (2) by 7.
   x + 2y = 0; x = 0
4. Substitute x = 0 into equation (1).
   0 + 2y = 0; x = 0
5. Write the terms in descending order of degree.
   2y + 0 = 0; x = 0
6. Combine like terms by adding their coefficients.
   2y = 0; x = 0
7. Divide both sides of equation (1) by 2.
   y = 0; x = 0
8. Write the answer with x first.
   x = 0; y = 0
9. Check: substitute x = 0 and y = 0 into both original equations. Both sides of each are equal.
   0 + 2*0 = 0;  0 = 0
   3*0 - 0 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x+2y=0; 3x-y=0 2`] = `
"x + 2y = 0; 3x - y = 0
1. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   x + 2y = 0; 6x - 2y = 0
2. 方程 (2) 加上方程 (1)，消去 y。
   x + 2y = 0; 7x = 0
3. 方程 (2) 兩邊同時除以 7。
   x + 2y = 0; x = 0
4. 把 x = 0 代入方程 (1)。
   0 + 2y = 0; x = 0
5. 按次數由高至低排列各項。
   2y + 0 = 0; x = 0
6. 合併同類項：把係數相加。
   2y = 0; x = 0
7. 方程 (1) 兩邊同時除以 2。
   y = 0; x = 0
8. 把答案寫成 x 在前。
   x = 0; y = 0
9. 驗算：把 x = 0 及 y = 0 代入兩條原方程，每條的左右兩邊都相等。
   0 + 2*0 = 0;  0 = 0
   3*0 - 0 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x+y=1; x-y=0 1`] = `
"x + y = 1; x - y = 0
1. Add equation (1) to equation (2) to eliminate y.
   x + y = 1; 2x = 1
2. Divide both sides of equation (2) by 2.
   x + y = 1; x = 1/2
3. Substitute x = 1/2 into equation (1).
   1/2 + y = 1; x = 1/2
4. Write the terms in descending order of degree.
   y + 1/2 = 1; x = 1/2
5. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 1 - 1/2; x = 1/2
6. The denominators are both 2, so subtract the numerators: 2/2 - 1/2 = 1/2.
   y = 1/2; x = 1/2
7. Write the answer with x first.
   x = 1/2; y = 1/2
8. Check: substitute x = 1/2 and y = 1/2 into both original equations. Both sides of each are equal.
   1/2 + 1/2 = 1;  1 = 1
   1/2 - 1/2 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x+y=1; x-y=0 2`] = `
"x + y = 1; x - y = 0
1. 方程 (2) 加上方程 (1)，消去 y。
   x + y = 1; 2x = 1
2. 方程 (2) 兩邊同時除以 2。
   x + y = 1; x = 1/2
3. 把 x = 1/2 代入方程 (1)。
   1/2 + y = 1; x = 1/2
4. 按次數由高至低排列各項。
   y + 1/2 = 1; x = 1/2
5. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 1 - 1/2; x = 1/2
6. 分母都是 2，所以分子相減：2/2 - 1/2 = 1/2。
   y = 1/2; x = 1/2
7. 把答案寫成 x 在前。
   x = 1/2; y = 1/2
8. 驗算：把 x = 1/2 及 y = 1/2 代入兩條原方程，每條的左右兩邊都相等。
   1/2 + 1/2 = 1;  1 = 1
   1/2 - 1/2 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x+y=2; 2x+2y=4 1`] = `
"x + y = 2; 2x + 2y = 4
1. Multiply equation (1) by 2 so that the y terms have the same size.
   2x + 2y = 4; 2x + 2y = 4
2. Subtract equation (1) from equation (2) to eliminate y.
   2x + 2y = 4; 0 = 0
3. This statement is always true, so both equations describe the same line: there are infinitely many solutions.
   Infinitely many solutions: every pair satisfying 2x + 2y = 4."
`;

exports[`T5 golden solutions > x+y=2; 2x+2y=4 2`] = `
"x + y = 2; 2x + 2y = 4
1. 方程 (1) 乘以 2，令兩條方程中 y 項的係數大小相同。
   2x + 2y = 4; 2x + 2y = 4
2. 方程 (2) 減去方程 (1)，消去 y。
   2x + 2y = 4; 0 = 0
3. 這個式子必定成立，即兩條方程代表同一條直線，所以有無限多組解。
   有無限多組解：所有滿足 2x + 2y = 4 的數對。"
`;

exports[`T5 golden solutions > x+y=2; x+y=3 1`] = `
"x + y = 2; x + y = 3
1. Subtract equation (1) from equation (2) to eliminate y.
   x + y = 2; 0 = 1
2. This statement is false, so the simultaneous equations have no solution.
   There is no real solution."
`;

exports[`T5 golden solutions > x+y=2; x+y=3 2`] = `
"x + y = 2; x + y = 3
1. 方程 (2) 減去方程 (1)，消去 y。
   x + y = 2; 0 = 1
2. 這個式子不成立，所以聯立方程無解。
   沒有實數解。"
`;

exports[`T5 golden solutions > x+y=5; x-y=1 1`] = `
"x + y = 5; x - y = 1
1. Add equation (1) to equation (2) to eliminate y.
   x + y = 5; 2x = 6
2. Divide both sides of equation (2) by 2.
   x + y = 5; x = 3
3. Substitute x = 3 into equation (1).
   3 + y = 5; x = 3
4. Write the terms in descending order of degree.
   y + 3 = 5; x = 3
5. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 5 - 3; x = 3
6. Subtract: 5 - 3 = 2.
   y = 2; x = 3
7. Write the answer with x first.
   x = 3; y = 2
8. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   3 + 2 = 5;  5 = 5
   3 - 2 = 1;  1 = 1"
`;

exports[`T5 golden solutions > x+y=5; x-y=1 2`] = `
"x + y = 5; x - y = 1
1. 方程 (2) 加上方程 (1)，消去 y。
   x + y = 5; 2x = 6
2. 方程 (2) 兩邊同時除以 2。
   x + y = 5; x = 3
3. 把 x = 3 代入方程 (1)。
   3 + y = 5; x = 3
4. 按次數由高至低排列各項。
   y + 3 = 5; x = 3
5. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 5 - 3; x = 3
6. 相減：5 - 3 = 2。
   y = 2; x = 3
7. 把答案寫成 x 在前。
   x = 3; y = 2
8. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   3 + 2 = 5;  5 = 5
   3 - 2 = 1;  1 = 1"
`;

exports[`T5 golden solutions > x+y=10; x-y=2 1`] = `
"x + y = 10; x - y = 2
1. Add equation (1) to equation (2) to eliminate y.
   x + y = 10; 2x = 12
2. Divide both sides of equation (2) by 2.
   x + y = 10; x = 6
3. Substitute x = 6 into equation (1).
   6 + y = 10; x = 6
4. Write the terms in descending order of degree.
   y + 6 = 10; x = 6
5. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 10 - 6; x = 6
6. Subtract: 10 - 6 = 4.
   y = 4; x = 6
7. Write the answer with x first.
   x = 6; y = 4
8. Check: substitute x = 6 and y = 4 into both original equations. Both sides of each are equal.
   6 + 4 = 10;  10 = 10
   6 - 4 = 2;  2 = 2"
`;

exports[`T5 golden solutions > x+y=10; x-y=2 2`] = `
"x + y = 10; x - y = 2
1. 方程 (2) 加上方程 (1)，消去 y。
   x + y = 10; 2x = 12
2. 方程 (2) 兩邊同時除以 2。
   x + y = 10; x = 6
3. 把 x = 6 代入方程 (1)。
   6 + y = 10; x = 6
4. 按次數由高至低排列各項。
   y + 6 = 10; x = 6
5. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 10 - 6; x = 6
6. 相減：10 - 6 = 4。
   y = 4; x = 6
7. 把答案寫成 x 在前。
   x = 6; y = 4
8. 驗算：把 x = 6 及 y = 4 代入兩條原方程，每條的左右兩邊都相等。
   6 + 4 = 10;  10 = 10
   6 - 4 = 2;  2 = 2"
`;

exports[`T5 golden solutions > x+y-3=0; 2x-y=0 1`] = `
"x + y - 3 = 0; 2x - y = 0
1. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   x + y = 3; 2x - y = 0
2. Add equation (1) to equation (2) to eliminate y.
   x + y = 3; 3x = 3
3. Divide both sides of equation (2) by 3.
   x + y = 3; x = 1
4. Substitute x = 1 into equation (1).
   1 + y = 3; x = 1
5. Write the terms in descending order of degree.
   y + 1 = 3; x = 1
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 3 - 1; x = 1
7. Subtract: 3 - 1 = 2.
   y = 2; x = 1
8. Write the answer with x first.
   x = 1; y = 2
9. Check: substitute x = 1 and y = 2 into both original equations. Both sides of each are equal.
   1 + 2 - 3 = 0;  0 = 0
   2*1 - 2 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x+y-3=0; 2x-y=0 2`] = `
"x + y - 3 = 0; 2x - y = 0
1. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   x + y = 3; 2x - y = 0
2. 方程 (2) 加上方程 (1)，消去 y。
   x + y = 3; 3x = 3
3. 方程 (2) 兩邊同時除以 3。
   x + y = 3; x = 1
4. 把 x = 1 代入方程 (1)。
   1 + y = 3; x = 1
5. 按次數由高至低排列各項。
   y + 1 = 3; x = 1
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 3 - 1; x = 1
7. 相減：3 - 1 = 2。
   y = 2; x = 1
8. 把答案寫成 x 在前。
   x = 1; y = 2
9. 驗算：把 x = 1 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   1 + 2 - 3 = 0;  0 = 0
   2*1 - 2 = 0;  0 = 0"
`;

exports[`T5 golden solutions > x/2+y/3=2; x-y=-1 1`] = `
"x/2 + y/3 = 2; x - y = -1
1. Simplify each term: multiply the numbers, and add the powers of the same letter.
   (1/2)x + (1/3)y = 2; x - y = -1
2. Multiply both sides of equation (1) by 6 to clear the fractions.
   3x + 2y = 12; x - y = -1
3. Multiply equation (2) by 2 so that the y terms have the same size.
   3x + 2y = 12; 2x - 2y = -2
4. Add equation (1) to equation (2) to eliminate y.
   3x + 2y = 12; 5x = 10
5. Divide both sides of equation (2) by 5.
   3x + 2y = 12; x = 2
6. Substitute x = 2 into equation (1).
   3*2 + 2y = 12; x = 2
7. Simplify each term: multiply the numbers, and add the powers of the same letter.
   6 + 2y = 12; x = 2
8. Write the terms in descending order of degree.
   2y + 6 = 12; x = 2
9. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   2y = 12 - 6; x = 2
10. Subtract: 12 - 6 = 6.
   2y = 6; x = 2
11. Divide both sides of equation (1) by 2.
   y = 3; x = 2
12. Write the answer with x first.
   x = 2; y = 3
13. Check: substitute x = 2 and y = 3 into both original equations. Both sides of each are equal.
   2/2 + 3/3 = 2;  2 = 2
   2 - 3 = -1;  -1 = -1"
`;

exports[`T5 golden solutions > x/2+y/3=2; x-y=-1 2`] = `
"x/2 + y/3 = 2; x - y = -1
1. 化簡每一項：數字相乘，相同字母的指數相加。
   (1/2)x + (1/3)y = 2; x - y = -1
2. 方程 (1) 兩邊同時乘以 6，消去分母。
   3x + 2y = 12; x - y = -1
3. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   3x + 2y = 12; 2x - 2y = -2
4. 方程 (2) 加上方程 (1)，消去 y。
   3x + 2y = 12; 5x = 10
5. 方程 (2) 兩邊同時除以 5。
   3x + 2y = 12; x = 2
6. 把 x = 2 代入方程 (1)。
   3*2 + 2y = 12; x = 2
7. 化簡每一項：數字相乘，相同字母的指數相加。
   6 + 2y = 12; x = 2
8. 按次數由高至低排列各項。
   2y + 6 = 12; x = 2
9. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   2y = 12 - 6; x = 2
10. 相減：12 - 6 = 6。
   2y = 6; x = 2
11. 方程 (1) 兩邊同時除以 2。
   y = 3; x = 2
12. 把答案寫成 x 在前。
   x = 2; y = 3
13. 驗算：把 x = 2 及 y = 3 代入兩條原方程，每條的左右兩邊都相等。
   2/2 + 3/3 = 2;  2 = 2
   2 - 3 = -1;  -1 = -1"
`;

exports[`T5 golden solutions > x/3-y/4=1; x+y=10 1`] = `
"x/3 - y/4 = 1; x + y = 10
1. Simplify each term: multiply the numbers, and add the powers of the same letter.
   (1/3)x - (1/4)y = 1; x + y = 10
2. Multiply both sides of equation (1) by 12 to clear the fractions.
   4x - 3y = 12; x + y = 10
3. Multiply equation (2) by 3 so that the y terms have the same size.
   4x - 3y = 12; 3x + 3y = 30
4. Add equation (1) to equation (2) to eliminate y.
   4x - 3y = 12; 7x = 42
5. Divide both sides of equation (2) by 7.
   4x - 3y = 12; x = 6
6. Substitute x = 6 into equation (1).
   4*6 - 3y = 12; x = 6
7. Simplify each term: multiply the numbers, and add the powers of the same letter.
   24 - 3y = 12; x = 6
8. Write the terms in descending order of degree.
   -3y + 24 = 12; x = 6
9. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -3y = 12 - 24; x = 6
10. Subtract: 12 - 24 = -12.
   -3y = -12; x = 6
11. Divide both sides of equation (1) by -3.
   y = 4; x = 6
12. Write the answer with x first.
   x = 6; y = 4
13. Check: substitute x = 6 and y = 4 into both original equations. Both sides of each are equal.
   6/3 - 4/4 = 1;  1 = 1
   6 + 4 = 10;  10 = 10"
`;

exports[`T5 golden solutions > x/3-y/4=1; x+y=10 2`] = `
"x/3 - y/4 = 1; x + y = 10
1. 化簡每一項：數字相乘，相同字母的指數相加。
   (1/3)x - (1/4)y = 1; x + y = 10
2. 方程 (1) 兩邊同時乘以 12，消去分母。
   4x - 3y = 12; x + y = 10
3. 方程 (2) 乘以 3，令兩條方程中 y 項的係數大小相同。
   4x - 3y = 12; 3x + 3y = 30
4. 方程 (2) 加上方程 (1)，消去 y。
   4x - 3y = 12; 7x = 42
5. 方程 (2) 兩邊同時除以 7。
   4x - 3y = 12; x = 6
6. 把 x = 6 代入方程 (1)。
   4*6 - 3y = 12; x = 6
7. 化簡每一項：數字相乘，相同字母的指數相加。
   24 - 3y = 12; x = 6
8. 按次數由高至低排列各項。
   -3y + 24 = 12; x = 6
9. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -3y = 12 - 24; x = 6
10. 相減：12 - 24 = -12。
   -3y = -12; x = 6
11. 方程 (1) 兩邊同時除以 -3。
   y = 4; x = 6
12. 把答案寫成 x 在前。
   x = 6; y = 4
13. 驗算：把 x = 6 及 y = 4 代入兩條原方程，每條的左右兩邊都相等。
   6/3 - 4/4 = 1;  1 = 1
   6 + 4 = 10;  10 = 10"
`;

exports[`T5 golden solutions > x=1; y=-2 1`] = `
"x = 1; y = -2
1. Check: substitute x = 1 and y = -2 into both original equations. Both sides of each are equal.
   1 = 1;  1 = 1
   -2 = -2;  -2 = -2"
`;

exports[`T5 golden solutions > x=1; y=-2 2`] = `
"x = 1; y = -2
1. 驗算：把 x = 1 及 y = -2 代入兩條原方程，每條的左右兩邊都相等。
   1 = 1;  1 = 1
   -2 = -2;  -2 = -2"
`;

exports[`T5 golden solutions > x=2; x+y=5 1`] = `
"x = 2; x + y = 5
1. Substitute x = 2 into equation (2).
   x = 2; 2 + y = 5
2. Write the terms in descending order of degree.
   x = 2; y + 2 = 5
3. Equation (2): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   x = 2; y = 5 - 2
4. Subtract: 5 - 2 = 3.
   x = 2; y = 3
5. Check: substitute x = 2 and y = 3 into both original equations. Both sides of each are equal.
   2 = 2;  2 = 2
   2 + 3 = 5;  5 = 5"
`;

exports[`T5 golden solutions > x=2; x+y=5 2`] = `
"x = 2; x + y = 5
1. 把 x = 2 代入方程 (2)。
   x = 2; 2 + y = 5
2. 按次數由高至低排列各項。
   x = 2; y + 2 = 5
3. 方程 (2)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   x = 2; y = 5 - 2
4. 相減：5 - 2 = 3。
   x = 2; y = 3
5. 驗算：把 x = 2 及 y = 3 代入兩條原方程，每條的左右兩邊都相等。
   2 = 2;  2 = 2
   2 + 3 = 5;  5 = 5"
`;

exports[`T5 golden solutions > x=3y; x+y=8 1`] = `
"x = 3y; x + y = 8
1. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   x - 3y = 0; x + y = 8
2. Subtract equation (1) from equation (2) to eliminate x.
   x - 3y = 0; 4y = 8
3. Divide both sides of equation (2) by 4.
   x - 3y = 0; y = 2
4. Substitute y = 2 into equation (1).
   x - 3*2 = 0; y = 2
5. Simplify each term: multiply the numbers, and add the powers of the same letter.
   x - 6 = 0; y = 2
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   x = 6; y = 2
7. Check: substitute x = 6 and y = 2 into both original equations. Both sides of each are equal.
   6 = 6;  3*2 = 6
   6 + 2 = 8;  8 = 8"
`;

exports[`T5 golden solutions > x=3y; x+y=8 2`] = `
"x = 3y; x + y = 8
1. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   x - 3y = 0; x + y = 8
2. 方程 (2) 減去方程 (1)，消去 x。
   x - 3y = 0; 4y = 8
3. 方程 (2) 兩邊同時除以 4。
   x - 3y = 0; y = 2
4. 把 y = 2 代入方程 (1)。
   x - 3*2 = 0; y = 2
5. 化簡每一項：數字相乘，相同字母的指數相加。
   x - 6 = 0; y = 2
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   x = 6; y = 2
7. 驗算：把 x = 6 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   6 = 6;  3*2 = 6
   6 + 2 = 8;  8 = 8"
`;

exports[`T5 golden solutions > x-2y=-1; 3x+y=11 1`] = `
"x - 2y = -1; 3x + y = 11
1. Multiply equation (2) by 2 so that the y terms have the same size.
   x - 2y = -1; 6x + 2y = 22
2. Add equation (1) to equation (2) to eliminate y.
   x - 2y = -1; 7x = 21
3. Divide both sides of equation (2) by 7.
   x - 2y = -1; x = 3
4. Substitute x = 3 into equation (1).
   3 - 2y = -1; x = 3
5. Write the terms in descending order of degree.
   -2y + 3 = -1; x = 3
6. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -2y = -1 - 3; x = 3
7. Subtract: -1 - 3 = -4.
   -2y = -4; x = 3
8. Divide both sides of equation (1) by -2.
   y = 2; x = 3
9. Write the answer with x first.
   x = 3; y = 2
10. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   3 - 2*2 = -1;  -1 = -1
   3*3 + 2 = 11;  11 = 11"
`;

exports[`T5 golden solutions > x-2y=-1; 3x+y=11 2`] = `
"x - 2y = -1; 3x + y = 11
1. 方程 (2) 乘以 2，令兩條方程中 y 項的係數大小相同。
   x - 2y = -1; 6x + 2y = 22
2. 方程 (2) 加上方程 (1)，消去 y。
   x - 2y = -1; 7x = 21
3. 方程 (2) 兩邊同時除以 7。
   x - 2y = -1; x = 3
4. 把 x = 3 代入方程 (1)。
   3 - 2y = -1; x = 3
5. 按次數由高至低排列各項。
   -2y + 3 = -1; x = 3
6. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -2y = -1 - 3; x = 3
7. 相減：-1 - 3 = -4。
   -2y = -4; x = 3
8. 方程 (1) 兩邊同時除以 -2。
   y = 2; x = 3
9. 把答案寫成 x 在前。
   x = 3; y = 2
10. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   3 - 2*2 = -1;  -1 = -1
   3*3 + 2 = 11;  11 = 11"
`;

exports[`T5 golden solutions > x-y=1; y-x=-1 1`] = `
"x - y = 1; y - x = -1
1. Write the terms in descending order of degree.
   x - y = 1; -x + y = -1
2. Add equation (1) to equation (2) to eliminate y.
   x - y = 1; 0 = 0
3. This statement is always true, so both equations describe the same line: there are infinitely many solutions.
   Infinitely many solutions: every pair satisfying x - y = 1."
`;

exports[`T5 golden solutions > x-y=1; y-x=-1 2`] = `
"x - y = 1; y - x = -1
1. 按次數由高至低排列各項。
   x - y = 1; -x + y = -1
2. 方程 (2) 加上方程 (1)，消去 y。
   x - y = 1; 0 = 0
3. 這個式子必定成立，即兩條方程代表同一條直線，所以有無限多組解。
   有無限多組解：所有滿足 x - y = 1 的數對。"
`;

exports[`T5 golden solutions > y=2x+1; 3x+y=11 1`] = `
"y = 2x + 1; 3x + y = 11
1. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y - 2x = 1; 3x + y = 11
2. Write the terms in descending order of degree.
   -2x + y = 1; 3x + y = 11
3. Subtract equation (1) from equation (2) to eliminate y.
   -2x + y = 1; 5x = 10
4. Divide both sides of equation (2) by 5.
   -2x + y = 1; x = 2
5. Substitute x = 2 into equation (1).
   -2*2 + y = 1; x = 2
6. Simplify each term: multiply the numbers, and add the powers of the same letter.
   -4 + y = 1; x = 2
7. Write the terms in descending order of degree.
   y - 4 = 1; x = 2
8. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 1 + 4; x = 2
9. Add: 1 + 4 = 5.
   y = 5; x = 2
10. Write the answer with x first.
   x = 2; y = 5
11. Check: substitute x = 2 and y = 5 into both original equations. Both sides of each are equal.
   5 = 5;  2*2 + 1 = 5
   3*2 + 5 = 11;  11 = 11"
`;

exports[`T5 golden solutions > y=2x+1; 3x+y=11 2`] = `
"y = 2x + 1; 3x + y = 11
1. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y - 2x = 1; 3x + y = 11
2. 按次數由高至低排列各項。
   -2x + y = 1; 3x + y = 11
3. 方程 (2) 減去方程 (1)，消去 y。
   -2x + y = 1; 5x = 10
4. 方程 (2) 兩邊同時除以 5。
   -2x + y = 1; x = 2
5. 把 x = 2 代入方程 (1)。
   -2*2 + y = 1; x = 2
6. 化簡每一項：數字相乘，相同字母的指數相加。
   -4 + y = 1; x = 2
7. 按次數由高至低排列各項。
   y - 4 = 1; x = 2
8. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 1 + 4; x = 2
9. 相加：1 + 4 = 5。
   y = 5; x = 2
10. 把答案寫成 x 在前。
   x = 2; y = 5
11. 驗算：把 x = 2 及 y = 5 代入兩條原方程，每條的左右兩邊都相等。
   5 = 5;  2*2 + 1 = 5
   3*2 + 5 = 11;  11 = 11"
`;

exports[`T5 golden solutions > y=3; 2x-y=1 1`] = `
"y = 3; 2x - y = 1
1. Substitute y = 3 into equation (2).
   y = 3; 2x - 3 = 1
2. Equation (2): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y = 3; 2x = 1 + 3
3. Add: 1 + 3 = 4.
   y = 3; 2x = 4
4. Divide both sides of equation (2) by 2.
   y = 3; x = 2
5. Write the answer with x first.
   x = 2; y = 3
6. Check: substitute x = 2 and y = 3 into both original equations. Both sides of each are equal.
   3 = 3;  3 = 3
   2*2 - 3 = 1;  1 = 1"
`;

exports[`T5 golden solutions > y=3; 2x-y=1 2`] = `
"y = 3; 2x - y = 1
1. 把 y = 3 代入方程 (2)。
   y = 3; 2x - 3 = 1
2. 方程 (2)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y = 3; 2x = 1 + 3
3. 相加：1 + 3 = 4。
   y = 3; 2x = 4
4. 方程 (2) 兩邊同時除以 2。
   y = 3; x = 2
5. 把答案寫成 x 在前。
   x = 2; y = 3
6. 驗算：把 x = 2 及 y = 3 代入兩條原方程，每條的左右兩邊都相等。
   3 = 3;  3 = 3
   2*2 - 3 = 1;  1 = 1"
`;

exports[`T5 golden solutions > y=x-1; y=-x+5 1`] = `
"y = x - 1; y = -x + 5
1. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   y - x = -1; y = -x + 5
2. Write the terms in descending order of degree.
   -x + y = -1; y = -x + 5
3. Equation (2): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -x + y = -1; y + x = 5
4. Write the terms in descending order of degree.
   -x + y = -1; x + y = 5
5. Add equation (1) to equation (2) to eliminate x.
   -x + y = -1; 2y = 4
6. Divide both sides of equation (2) by 2.
   -x + y = -1; y = 2
7. Substitute y = 2 into equation (1).
   -x + 2 = -1; y = 2
8. Equation (1): move the terms with x and y to the left and the numbers to the right. A term changes sign when it moves.
   -x = -1 - 2; y = 2
9. Subtract: -1 - 2 = -3.
   -x = -3; y = 2
10. Multiply both sides of equation (1) by -1.
   x = 3; y = 2
11. Check: substitute x = 3 and y = 2 into both original equations. Both sides of each are equal.
   2 = 2;  3 - 1 = 2
   2 = 2;  -3 + 5 = 2"
`;

exports[`T5 golden solutions > y=x-1; y=-x+5 2`] = `
"y = x - 1; y = -x + 5
1. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   y - x = -1; y = -x + 5
2. 按次數由高至低排列各項。
   -x + y = -1; y = -x + 5
3. 方程 (2)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -x + y = -1; y + x = 5
4. 按次數由高至低排列各項。
   -x + y = -1; x + y = 5
5. 方程 (2) 加上方程 (1)，消去 x。
   -x + y = -1; 2y = 4
6. 方程 (2) 兩邊同時除以 2。
   -x + y = -1; y = 2
7. 把 y = 2 代入方程 (1)。
   -x + 2 = -1; y = 2
8. 方程 (1)：把含 x 和 y 的項移到左邊，數字移到右邊。項移到另一邊時要變號。
   -x = -1 - 2; y = 2
9. 相減：-1 - 2 = -3。
   -x = -3; y = 2
10. 方程 (1) 兩邊同時乘以 -1。
   x = 3; y = 2
11. 驗算：把 x = 3 及 y = 2 代入兩條原方程，每條的左右兩邊都相等。
   2 = 2;  3 - 1 = 2
   2 = 2;  -3 + 5 = 2"
`;
